--- a/my-app/src/Components/App/App.css
+++ b/my-app/src/Components/App/App.css
@@ -1,11 +1,43 @@
-.app{
-    overflow-x: hidden;
+@import "../../vendor/fonts.css";
+
+.app {
+  overflow-x: hidden;
 }
 
 .container {
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgGNkwOF0bPw9pLIgWenIxHTwQB7AtAnDo4A&usqp=CAU");
+  background-image: url("https://th.bing.com/th/id/R.3b23908f4530b7b9eec2a7a684bed00c?rik=zRNTi9fmIVW8OA&pid=ImgRaw&r=0");
   background-size: cover;
   background-repeat: no-repeat;
   height: 576px;
   width: 100%;
+}
+
+.modal__info {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14.52px;
+  display: flex;
+  flex-direction: column;
+  color: rgba(47, 113, 229, 1);
+}
+
+.modal__input {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16.94px;
+  display: flex;
+  height: 32px;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  margin-bottom: 24px;
+  color: rgba(0, 0, 0, 1);
+}
+
+.modal__input:not(:focus):empty {
+  border-bottom: 1px solid rgba(230, 232, 235, 1);
+  color: rgba(230, 232, 235, 1);
 }
