--- a/my-app/src/Components/PopupWithForm/PopupWithForm.css
+++ b/my-app/src/Components/PopupWithForm/PopupWithForm.css
@@ -1,3 +1,5 @@
+@import url("../../vendor/fonts.css");
+
 .modal__section {
   position: fixed;
   top: 0;
@@ -13,44 +15,63 @@
 .modal__content {
   position: relative;
   background-color: white;
-  width: 496px;
-  height: 436px;
+  width: 430px;
   border-radius: 20px;
   padding: 34px 36px;
   margin-left: 28px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__content_signin {
+  height: 380px;
+}
+
+.modal__content_signup {
+  height: 438px;
 }
 
 .modal__button-reset {
   position: absolute;
-  right: 28px;
-  top: 20px;
+  right: -40px;
+  top: -35px;
   border: none;
   background: none;
-  color: black;
+}
+
+.modal__button-reset:hover {
+  opacity: 0.5;
 }
 
 .modal__close {
-  height: 20px;
+  height: 40px;
 }
 
 .modal__title {
-  margin: 28px auto 24px 0;
-  font-family: "Cabinet Grotesk", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
+  margin: 0 auto 40px 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 28.13px;
 }
 
 .modal__button-submit {
-  margin: 34px 0 36px 0;
-  background-color: rgba(0, 0, 0, 1);
-  border-radius: 4px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  background-color: rgba(47, 113, 229, 1);
+  border-radius: 30px;
   border-style: none;
-  height: 36px;
-  width: 124px;
+  height: 64px;
+  width: 100%;
   color: white;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
+  margin-top: 30px;
 }
 
 .modal__button-submit:not(:disabled):hover {
@@ -58,22 +79,48 @@
 }
 
 .modal__button-submit:disabled {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(230, 232, 235, 1);
+  color: rgba(182, 188, 191, 1);
 }
 
-/*.modal__button_two {
+.modal__bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 226px;
+  height: 20px;
+  padding-top: 10px;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.94px;
+  position: absolute;
+  left: 40px;
+  bottom: 40px;
+}
+
+.modal__button_two {
   background-color: white;
   border: none;
-  width: 125px;
-  height: 30px;
-  font-family: "Cabinet Grotesk", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 20px;
-  text-align: left;
+  color: rgba(47, 113, 229, 1);
 }
 
-.modal__bottom{}
-.modal__or{}
+.modal__button_two:hover {
+  opacity: 0.5;
+}
 
-*/
+.modal__or {
+  color: rgba(0, 0, 0, 1);
+}
+
+.modal__bottom_signin {
+  position: absolute;
+  left: 141px;
+  bottom: 60px;
+}
+
+.modal__bottom_signup {
+  position: absolute;
+  left: 141px;
+  bottom: 55px;
+}
