--- a/my-app/src/Components/SearchForm/SearchForm.css
+++ b/my-app/src/Components/SearchForm/SearchForm.css
@@ -2,7 +2,7 @@
 
 .search {
   position: relative;
-  width: 500px;
+  width: 608px;
   border-radius: 20px;
   box-sizing: border-box;
   margin-top: 75px;
@@ -10,9 +10,8 @@
 
 .search__input {
   width: 100%;
-  height: 40px;
-  border-radius: 20px;
-  margin-left: 5px;
+  height: 64px;
+  border-radius: 40px;
   border: none;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -20,13 +19,17 @@
   line-height: 22px;
 }
 
+.search__input[type="text"] {
+  padding-left: 18px;
+}
+
 .search__button {
   position: absolute;
   top: 0px;
-  right: -11px;
+  right: -20px;
   border-radius: 50px;
   width: 168px;
-  height: 43px;
+  height: 66px;
   background-color: #2f71e5;
   color: white;
   border: none;
