--- a/my-app/src/Components/App/App.css
+++ b/my-app/src/Components/App/App.css
@@ -2,12 +2,27 @@
 
 .app {
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-.container {
+.app__cards {
+  visibility: visible;
+}
+.app__cards_hidden {
+  display: none;
+}
+
+.container__home {
   background-image: url("https://th.bing.com/th/id/R.3b23908f4530b7b9eec2a7a684bed00c?rik=zRNTi9fmIVW8OA&pid=ImgRaw&r=0");
   background-size: cover;
   background-repeat: no-repeat;
+  height: 576px;
+  width: 100%;
+}
+
+.container__saved {
+  background-color: white;
   height: 576px;
   width: 100%;
 }
