--- a/my-app/src/Components/NewsCard/NewsCard.css
+++ b/my-app/src/Components/NewsCard/NewsCard.css
@@ -1,56 +1,124 @@
 @import "../../vendor/fonts.css";
 
 .card {
+  position: relative;
   display: flex;
   flex-direction: column;
-  border: none;
-  border-radius: 5px;
+  border: 3px solid black;
+  border-radius: 15px;
   width: 400px;
   height: 576px;
 }
 
-.card__picture {
-  position: relative;
+.card__image {
+  border-radius: 15px 15px 0 0;
   width: 400px;
   height: 272px;
 }
 
-.card__image {
-  width: 100%;
-  height: 100%;
-}
-
-.card__button_save {
+.card__picture_group {
   position: absolute;
-  background-color: white;
-  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  width: 360px;
 }
 
-.card__button_image {
+.card__category {
+  background-color: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  max-width: 150px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.card__category_none {
+  visibility: hidden;
+}
+
+.card__button {
+  background-color: white;
+  border-radius: 8px;
   height: 40px;
   width: 40px;
 }
 
+.card__button_text {
+  background-color: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  max-width: 150px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14.06px;
+}
+
+.card__button_text-hidden{
+  display: none;
+}
+
+
+.card__button_image {
+  height: 24px;
+  width: 24px;
+}
+
+/* .card__button_save:hover {
+  background-image: url("../../Images/save-hover.svg");
+}
+
+.card__button_trash {
+  background-image: url("../../Images/trash-hover.svg");
+} */
+
 .card__info {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  gap: 5px;
-  margin: 10px;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+  flex: 1 1 auto;
+  border-radius: 0 0 15px 15px;
+  gap: 10px;
 }
 
 .card__date {
-  width: 149px;
-  height: 24px;
+  margin: 0;
+  display: flex;
+  align-items: center;
   color: rgba(182, 188, 191, 1);
   font-family: "Roboto Slab", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  color: rgba(182, 188, 191, 1);
+  height: 24px;
 }
 
 .card__title {
+  height: 60px;
+  margin: 0;
   display: flex;
   flex-wrap: wrap;
   width: 352px;
@@ -63,13 +131,14 @@
 }
 
 .card__description {
+  height: 110px;
+  margin: 0;
   display: flex;
   flex-wrap: wrap;
   width: 352px;
   height: 110px;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -78,6 +147,8 @@
 }
 
 .card__author {
+  height: 20px;
+  margin: 0;
   font-family: "Roboto Slab", sans-serif;
   font-weight: 700;
   font-size: 16px;
