--- a/my-app/src/Components/SavedNews/SavedNews.css
+++ b/my-app/src/Components/SavedNews/SavedNews.css
@@ -3,16 +3,18 @@
 .saved__section {
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
-  margin-right: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
   color: black;
 }
 
 .saved__header {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  gap: 10px;
+  justify-content: space-around;
+  gap: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: white;
 }
 
@@ -26,12 +28,14 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  margin: 0;
 }
 
 .saved__note {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  margin: 0;
   flex-wrap: wrap;
   width: 530px;
   height: 92px;
@@ -51,16 +55,21 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  margin: 0;
 }
 
 .saved__span {
   font-weight: 700;
+  padding-left: 5px;
 }
 
 .saved__cards {
   background-color: rgba(245, 246, 247, 1);
+  height: 1200px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 5px;
+  padding: 75px 100px;
 }
