--- a/my-app/src/Components/SavedNewsHeader/SavedNewsHeader.css
+++ b/my-app/src/Components/SavedNewsHeader/SavedNewsHeader.css
@@ -2,18 +2,20 @@
 
 .header__section_saved {
   display: flex;
-  justify-content: space-between;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   height: 80px;
+  width: 1440px;
   padding-left: 100px;
   padding-right: 100px;
-  border-bottom: 0.05px solid rgba(26, 27, 34, 1);
-  background-color: white;
+  border-bottom: 0.05px solid gray;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
 .header__title_saved {
-  color: white;
+  color: rgba(26, 27, 34, 1);
   font-family: "Roboto Slab", sans-serif;
   font-weight: 700;
   font-size: 20px;
@@ -32,10 +34,20 @@
 }
 
 .header__home_saved {
-  color: rgba(26, 27, 34, 0.5);
+  color: rgba(26, 27, 34, 1);
   height: 80px;
   display: flex;
   align-items: center;
+}
+
+.header__articles_saved {
+  color: rgba(26, 27, 34, 1);
+  border-bottom: 3px solid rgba(26, 27, 34, 1);
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 178px;
 }
 
 .header__button_saved {
@@ -43,13 +55,14 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  border-bottom: 2px solid rgba(26, 27, 34, 0.5);
+  height: 100%;
+  border-bottom: 2px solid rgba(26, 27, 34, 1);
 }
 
 .header__button_signin {
   width: 176px;
   height: 48px;
-  border: 1px solid #fff;
+  border: 2px solid rgba(26, 27, 34, 1);
   border-radius: 40px;
   background: none;
   color: white;
@@ -57,4 +70,30 @@
 
 .header__button_signin:hover {
   opacity: 0.5;
+}
+
+.header__profile_saved {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  border: 2px solid rgba(26, 27, 34, 1);
+  border-radius: 40px;
+  width: 112px;
+  height: 48px;
+}
+
+.header__name_saved {
+  color: rgba(26, 27, 34, 1);
+}
+
+.header__pic_saved {
+  background: none;
+  border: none;
+  display: flex;
+}
+
+.header__image {
+  width: 24px;
+  height: 24px;
 }
