--- a/my-app/src/Components/Header/Header.css
+++ b/my-app/src/Components/Header/Header.css
@@ -14,6 +14,10 @@
   box-sizing: border-box;
 }
 
+.header__links {
+  text-decoration: none;
+}
+
 .header__title {
   color: white;
   font-family: "Roboto Slab", sans-serif;
