--- a/my-app/src/Components/SavedNewsHeader/SavedNewsHeader.css
+++ b/my-app/src/Components/SavedNewsHeader/SavedNewsHeader.css
@@ -14,6 +14,10 @@
   box-sizing: border-box;
 }
 
+.header__links_saved {
+  text-decoration: none;
+}
+
 .header__title_saved {
   color: rgba(26, 27, 34, 1);
   font-family: "Roboto Slab", sans-serif;
