--- a/my-app/src/Components/PopupWithForm/PopupWithForm.css
+++ b/my-app/src/Components/PopupWithForm/PopupWithForm.css
@@ -18,7 +18,6 @@
   width: 430px;
   border-radius: 20px;
   padding: 34px 36px;
-  margin-left: 28px;
   display: flex;
   flex-direction: column;
 }
@@ -31,7 +30,7 @@
   height: 438px;
 }
 
-.modal__content_succes{
+.modal__content_success {
   height: 182px;
 }
 
@@ -59,6 +58,12 @@
   line-height: 28.13px;
 }
 
+.modal__title_success {
+  width: 315px;
+  margin: 0;
+  padding: 30px 15px;
+}
+
 .modal__button-submit {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -76,6 +81,10 @@
   align-items: center;
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
   margin-top: 30px;
+}
+
+.modal__button-submit_success {
+  display: none;
 }
 
 .modal__button-submit:not(:disabled):hover {
@@ -127,4 +136,17 @@
   position: absolute;
   left: 141px;
   bottom: 55px;
+}
+
+.success__button {
+  max-width: 60px;
+  padding-left: 15px;
+  color: rgba(47, 113, 229, 1);
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.78px;
+}
+.success__button:hover {
+  opacity: 0.5;
 }
