--- a/my-app/src/Components/Main/Main.css
+++ b/my-app/src/Components/Main/Main.css
@@ -8,7 +8,13 @@
   align-items: center;
   margin: auto;
   height: 496px;
-  width: 608px;
+}
+
+.main__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .main__title {
@@ -16,6 +22,9 @@
   font-weight: 400;
   font-size: 60px;
   line-height: 64px;
+  margin: 0;
+  padding-bottom: 35px;
+  max-width: 608px;
 }
 
 .main__para {
@@ -23,4 +32,35 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  margin: 0;
+  max-width: 608px;
+}
+
+@media screen and (min-width: 400px) and (max-width: 800px) {
+  .main__section {
+    height: 344px;
+  }
+  .main__title {
+    font-size: 36px;
+    line-height: 40px;
+    padding-bottom: 20px;
+  }
+  .main__content {
+    max-width: 452px;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 399px) {
+  .main__section {
+    height: 480px;
+    margin: 0;
+    padding: 20px 10px;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .main__title {
+    font-size: 36px;
+    line-height: 40px;
+    padding-bottom: 15px;
+  }
 }
