--- a/my-app/src/Components/NewsCardsList/NewsCardsList.css
+++ b/my-app/src/Components/NewsCardsList/NewsCardsList.css
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 15px;
+}
+
+@media screen and (min-width: 300px) and (max-width: 800px) {
+  .card__list {
+    gap: 5px;
+  }
 }
