--- a/my-app/src/Components/SavedNews/SavedNews.css
+++ b/my-app/src/Components/SavedNews/SavedNews.css
@@ -24,7 +24,8 @@
   align-items: center;
   width: 712px;
   height: 24px;
-  font-family: "Inter", sans-serif;
+  color: rgba(26, 27, 34, 0.5);
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
@@ -48,9 +49,6 @@
 .saved__keywords {
   width: 712px;
   height: 24px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -65,11 +63,57 @@
 
 .saved__cards {
   background-color: rgba(245, 246, 247, 1);
-  height: 1200px;
+  max-height: 2000px;
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 5px;
   padding: 75px 100px;
+}
+
+@media screen and (min-width: 400px) and (max-width: 800px) {
+  .saved__section {
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+  .saved__note {
+    width: 336px;
+    height: 68px;
+    font-size: 30px;
+    line-height: 34px;
+  }
+  .saved__cards {
+    padding: 25px;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 399px) {
+  .saved__section {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .saved__header {
+    gap: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    height: 246px;
+    justify-content: flex-start;
+  }
+  .saved__articles {
+    font-size: 12px;
+    line-height: 24px;
+  }
+  .saved__note {
+    font-size: 30px;
+    line-height: 34px;
+    width: 288px;
+    padding-bottom: 42px;
+  }
+  .saved__keywords {
+    width: 288px;
+  }
+  .saved__cards {
+    padding: 15px 10px;
+  }
 }
