--- a/my-app/src/Components/SearchForm/SearchForm.css
+++ b/my-app/src/Components/SearchForm/SearchForm.css
@@ -20,13 +20,14 @@
 }
 
 .search__input[type="text"] {
-  padding-left: 18px;
+  text-indent: 15px;
+  color: rgba(182, 188, 191, 1);
 }
 
 .search__button {
   position: absolute;
   top: 0px;
-  right: -20px;
+  right: -3px;
   border-radius: 50px;
   width: 168px;
   height: 66px;
@@ -41,4 +42,59 @@
 
 .search__button:hover {
   opacity: 0.8;
+}
+
+@media screen and (min-width: 400px) and (max-width: 800px) {
+  .search {
+    width: 452px;
+    margin-top: 40px;
+  }
+  .search__input {
+    height: 56px;
+  }
+  .search__button {
+    height: 58px;
+    right: -5px;
+    top: 1px;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 399px) {
+  .search__window {
+    display: flex;
+    flex-direction: column;
+    max-width: 288px;
+    height: 128px;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 125px;
+  }
+  .search__window_input {
+    width: 288px;
+    height: 56px;
+    border-radius: 40px;
+    border: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    padding: 0;
+  }
+  .search__window_input[type="text"] {
+    text-indent: 15px;
+    color: rgba(182, 188, 191, 1);
+  }
+  .search__window_button {
+    width: 288px;
+    height: 56px;
+    border-radius: 40px;
+    background-color: #2f71e5;
+    color: white;
+    border: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
