--- a/my-app/src/Components/Main/Main.css
+++ b/my-app/src/Components/Main/Main.css
@@ -55,7 +55,7 @@
     height: 480px;
     margin: 0;
     padding: 20px 10px;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
   }
   .main__title {
