--- a/my-app/src/Components/PopupWithForm/PopupWithForm.css
+++ b/my-app/src/Components/PopupWithForm/PopupWithForm.css
@@ -12,6 +12,15 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.modal__section_menu {
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.modal__form_menu {
+  position: absolute;
+  width: 100%;
+}
+
 .modal__content {
   position: relative;
   background-color: white;
@@ -20,6 +29,15 @@
   padding: 34px 36px;
   display: flex;
   flex-direction: column;
+}
+
+.modal__content_menu {
+  background-color: rgba(26, 27, 34, 1);
+  width: 100%;
+  height: 230px;
+  padding: 15px;
+  border-radius: 0;
+  align-items: center;
 }
 
 .modal__content_signin {
@@ -40,6 +58,10 @@
   top: -35px;
   border: none;
   background: none;
+}
+
+.modal__button-reset_menu {
+  display: none;
 }
 
 .modal__button-reset:hover {
@@ -81,6 +103,13 @@
   align-items: center;
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
   margin-top: 30px;
+}
+
+.modal__button-submit_menu {
+  position: absolute;
+  background-color: transparent;
+  border: 1px solid #fff;
+  height: 56px;
 }
 
 .modal__button-submit_success {
@@ -149,4 +178,33 @@
 }
 .success__button:hover {
   opacity: 0.5;
+}
+
+@media screen and (min-width: 300px) and (max-width: 399px) {
+  .modal__section {
+    align-items: flex-start;
+  }
+  .modal__content_signin {
+    top: 75px;
+    height: 100%;
+    padding: 20px 15px;
+  }
+  .modal__content_signup {
+    top: 75px;
+    height: 100%;
+    padding: 20px 15px;
+  }
+  .modal__content_success {
+    top: 75px;
+    height: 100%;
+    padding: 20px 15px;
+  }
+  .modal__bottom {
+    left: 65px;
+    top: 350px;
+  }
+  .modal__button-reset {
+    right: 20px;
+    top: -60px;
+  }
 }
