--- a/my-app/src/Components/Header/Header.css
+++ b/my-app/src/Components/Header/Header.css
@@ -131,6 +131,9 @@
     font-size: 16px;
     color: white;
   }
+  .header__title-white {
+    color: white;
+  }
   .header__menu {
     background: none;
     border: none;
