--- a/my-app/src/Components/SavedNews/SavedNews.css
+++ b/my-app/src/Components/SavedNews/SavedNews.css
@@ -114,6 +114,9 @@
     width: 288px;
   }
   .saved__cards {
-    padding: 15px 10px;
+    padding: 0;
+    padding-top: 15px;
+    justify-content: center;
+    align-items: center;
   }
 }
