updates for api requests

--- a/my-app/src/Components/About/About.css
+++ b/my-app/src/Components/About/About.css
@@ -57,9 +57,10 @@
   }
   .about__text {
     padding-top: 40px;
+    display: block;
   }
   .about__para {
-    width: 424px;
+    width: 100%;
   }
 }
 
