--- a/my-app/src/Components/App/App.css
+++ b/my-app/src/Components/App/App.css
@@ -13,6 +13,20 @@
   display: none;
 }
 
+.preloader {
+  visibility: visible;
+}
+.preloader_hidden {
+  display: none;
+}
+
+.nothing__section {
+  visibility: visible;
+}
+.nothing__section_hidden {
+  display: none;
+}
+
 .container__home {
   background-image: url("https://th.bing.com/th/id/R.3b23908f4530b7b9eec2a7a684bed00c?rik=zRNTi9fmIVW8OA&pid=ImgRaw&r=0");
   background-size: cover;
