--- a/my-app/src/Components/Preloader/Preloader.css
+++ b/my-app/src/Components/Preloader/Preloader.css
@@ -1,3 +1,15 @@
+@import url("../../vendor/fonts.css");
+
+.preloader__section {
+  height: 282px;
+  width: 100%;
+  background-color: rgba(245, 246, 247, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .circle-preloader {
   display: block;
   width: 50px;
@@ -7,14 +19,22 @@
 
   border-radius: 50%;
 
-  position: absolute;
+  /* position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
-  margin: auto;
+  bottom: 0; 
+  margin: auto;*/
 
   animation: spin 0.75s infinite linear;
+}
+
+.preloader__info {
+  color: rgba(182, 188, 191, 1);
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 @keyframes spin {
