--- a/my-app/src/Components/SearchForm/SearchForm.css
+++ b/my-app/src/Components/SearchForm/SearchForm.css
@@ -19,6 +19,17 @@
   line-height: 22px;
 }
 
+.error {
+  color: rgba(255, 0, 0, 1);
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14.52px;
+}
+.error__none {
+  display: none;
+}
+
 .search__input[type="text"] {
   text-indent: 15px;
   color: rgba(182, 188, 191, 1);
