--- a/my-app/src/Components/About/About.css
+++ b/my-app/src/Components/About/About.css
@@ -3,10 +3,10 @@
 .about__section {
   display: flex;
   flex-direction: row;
-  height: 624px;
+  max-height: 624px;
   max-width: 100%;
-  gap: 35px;
-  padding: 100px 100px 0 100px;
+  gap: 70px;
+  padding: 100px;
 }
 
 .about__image {
@@ -18,6 +18,7 @@
 .about__text {
   display: flex;
   flex-direction: column;
+  gap: 20px;
 }
 
 .about__title {
@@ -26,23 +27,29 @@
   font-size: 40px;
   line-height: 46px;
   margin-bottom: 0;
+  padding-top: 20px;
 }
 
 .about__para {
   width: 600px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.about__para__text {
+.about__para_text {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  margin: 0;
 }
 
 @media screen and (min-width: 400px) and (max-width: 800px) {
   .about__section {
     height: 354px;
-    padding: 0 25px;
+    padding: 0 35px;
+    gap: 35px;
   }
   .about__image {
     height: 232px;
@@ -54,6 +61,8 @@
     font-size: 30px;
     line-height: 40px;
     margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 15px;
   }
   .about__text {
     padding-top: 40px;
@@ -67,13 +76,14 @@
 @media screen and (min-width: 300px) and (max-width: 399px) {
   .about__section {
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    padding: 10px 10px 0 10px;
+    padding: 25px 25px 0 25px;
     gap: 0;
+    height: 752px;
   }
   .about__text {
-    padding: 15px 10px 0 10px;
+    padding: 15px 10px 100px 10px;
   }
   .about__image {
     height: 272px;
