--- a/my-app/src/Components/PopupWithForm/PopupWithForm.css
+++ b/my-app/src/Components/PopupWithForm/PopupWithForm.css
@@ -58,18 +58,19 @@
   top: -35px;
   border: none;
   background: none;
+  cursor: pointer;
 }
 
 .modal__button-reset_menu {
   display: none;
 }
 
-.modal__button-reset:hover {
-  opacity: 0.5;
-}
-
 .modal__close {
   height: 40px;
+}
+
+.modal__close:hover {
+  opacity: 0.5;
 }
 
 .modal__title {
@@ -103,6 +104,7 @@
   align-items: center;
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
   margin-top: 30px;
+  cursor: pointer;
 }
 
 .modal__button-submit_menu {
@@ -145,6 +147,7 @@
   background-color: white;
   border: none;
   color: rgba(47, 113, 229, 1);
+  cursor: pointer;
 }
 
 .modal__button_two:hover {
@@ -175,6 +178,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 21.78px;
+  cursor: pointer;
 }
 .success__button:hover {
   opacity: 0.5;
