--- a/my-app/src/Components/SearchForm/SearchForm.css
+++ b/my-app/src/Components/SearchForm/SearchForm.css
@@ -9,6 +9,7 @@
 }
 
 .search__input {
+  color: rgba(26, 27, 34, 1);
   width: 100%;
   height: 64px;
   border-radius: 40px;
@@ -17,6 +18,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
+  cursor: pointer;
 }
 
 .error {
@@ -32,16 +34,18 @@
 
 .search__input[type="text"] {
   text-indent: 15px;
+}
+.search__input::placeholder {
   color: rgba(182, 188, 191, 1);
 }
 
 .search__button {
   position: absolute;
-  top: 0px;
-  right: -3px;
+  top: 1px;
+  right: -4px;
   border-radius: 50px;
   width: 168px;
-  height: 66px;
+  height: 64px;
   background-color: #2f71e5;
   color: white;
   border: none;
@@ -49,6 +53,7 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
+  cursor: pointer;
 }
 
 .search__button:hover {
@@ -61,12 +66,12 @@
     margin-top: 40px;
   }
   .search__input {
-    height: 56px;
+    height: 54px;
   }
   .search__button {
-    height: 58px;
+    height: 56px;
     right: -5px;
-    top: 1px;
+    top: 0px;
   }
 }
 
@@ -79,7 +84,7 @@
     gap: 10px;
     justify-content: center;
     align-items: center;
-    padding-top: 125px;
+    padding-top: 150px;
   }
   .search__window_input {
     width: 288px;
@@ -94,6 +99,9 @@
   }
   .search__window_input[type="text"] {
     text-indent: 15px;
+    color: rgba(26, 27, 34, 1);
+  }
+  .search__window_input::placeholder {
     color: rgba(182, 188, 191, 1);
   }
   .search__window_button {
