--- a/my-app/src/Components/SearchResults/SearchResults.css
+++ b/my-app/src/Components/SearchResults/SearchResults.css
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .results__button-text {
@@ -44,13 +45,13 @@
   display: none;
 }
 
-.results__button_text:hover {
+.results__button-text:hover {
   opacity: 0.5;
 }
 
 @media screen and (min-width: 400px) and (max-width: 800px) {
   .results {
-    padding: 35px 25px;
+    padding: 30px 15px;
   }
   .results__title {
     font-size: 30px;
