--- a/my-app/src/Components/About/About.css
+++ b/my-app/src/Components/About/About.css
@@ -37,7 +37,7 @@
   gap: 20px;
 }
 
-.about__para_text {
+.about__para-text {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 18px;
