--- a/my-app/src/Components/App/App.css
+++ b/my-app/src/Components/App/App.css
@@ -26,7 +26,7 @@
   display: none;
 }
 
-.container__home {
+.app__home {
   background-image: url("https://th.bing.com/th/id/R.3b23908f4530b7b9eec2a7a684bed00c?rik=zRNTi9fmIVW8OA&pid=ImgRaw&r=0");
   background-size: cover;
   background-repeat: no-repeat;
@@ -34,7 +34,7 @@
   width: 100%;
 }
 
-.container__saved {
+.app__saved {
   background-color: white;
   height: 576px;
   width: 100%;
