--- a/my-app/src/Components/Header/Header.css
+++ b/my-app/src/Components/Header/Header.css
@@ -49,7 +49,7 @@
   cursor: pointer;
 }
 
-.header__button_signin {
+.header__button-signin {
   width: 176px;
   height: 40px;
   border: 1px solid #fff;
@@ -59,7 +59,7 @@
   cursor: pointer;
 }
 
-.header__button_signin:hover {
+.header__button-signin:hover {
   opacity: 0.5;
 }
 
@@ -110,7 +110,7 @@
     height: 66px;
   }
 
-  .header__button_signin {
+  .header__button-signin {
     width: 152px;
     height: 40px;
   }
