--- a/my-app/src/Components/SearchForm/SearchForm.css
+++ b/my-app/src/Components/SearchForm/SearchForm.css
@@ -86,7 +86,7 @@
     align-items: center;
     padding-top: 150px;
   }
-  .search__window_input {
+  .search__window-input {
     width: 288px;
     height: 56px;
     border-radius: 40px;
@@ -97,14 +97,14 @@
     line-height: 22px;
     padding: 0;
   }
-  .search__window_input[type="text"] {
+  .search__window-input[type="text"] {
     text-indent: 15px;
     color: rgba(26, 27, 34, 1);
   }
-  .search__window_input::placeholder {
+  .search__window-input::placeholder {
     color: rgba(182, 188, 191, 1);
   }
-  .search__window_button {
+  .search__window-button {
     width: 288px;
     height: 56px;
     border-radius: 40px;
