--- a/my-app/src/Components/SearchResults/SearchResults.css
+++ b/my-app/src/Components/SearchResults/SearchResults.css
@@ -57,7 +57,7 @@
     font-size: 30px;
     line-height: 34px;
   }
-  .results__button_text {
+  .results__button-text {
     width: 240px;
     height: 56px;
     background-color: #fff;
@@ -72,7 +72,7 @@
     font-size: 30px;
     line-height: 34px;
   }
-  .results__button_text {
+  .results__button-text {
     width: 240px;
     height: 56px;
     background-color: #fff;
