--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -35,7 +35,7 @@
   max-width: 608px;
 }
 
-@media screen and (min-width: 400px) and (max-width: 800px) {
+@media screen and (min-width: 400px) and (max-width: 900px) {
   .main__section {
     padding: 45px;
   }
@@ -51,15 +51,14 @@
 
 @media screen and (min-width: 300px) and (max-width: 399px) {
   .main__section {
-    height: 480px;
+    height: 440px;
     margin: 0;
-    padding: 20px 10px;
+    padding: 20px;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
   .main__title {
     font-size: 36px;
     line-height: 40px;
-    padding-bottom: 15px;
   }
 }
