--- a/src/Components/NewsCardsList/NewsCardsList.css
+++ b/src/Components/NewsCardsList/NewsCardsList.css
@@ -1,4 +1,4 @@
-.card__list {
+.cards__list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (min-width: 300px) and (max-width: 800px) {
-  .card__list {
+  .cards__list {
     gap: 15px;
     justify-content: center;
     padding-left: 0;
