--- a/src/Components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/Components/SavedNewsHeader/SavedNewsHeader.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  max-width: 1440px;
+  width: auto;
   padding-left: 100px;
   padding-right: 100px;
   border-bottom: 0.05px solid rgba(209, 210, 214, 1);
@@ -53,7 +53,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 178px;
 }
 
 .header__button-saved {
@@ -73,7 +72,7 @@
   align-items: center;
   border: 2px solid rgba(26, 27, 34, 1);
   border-radius: 40px;
-  width: 112px;
+  width: auto;
   height: 48px;
   cursor: pointer;
 }
@@ -88,16 +87,16 @@
   display: flex;
 }
 
-.header__image {
+.header__image-saved {
   width: 24px;
   height: 24px;
 }
 
-@media screen and (min-width: 400px) and (max-width: 800px) {
+@media screen and (min-width: 550px) and (max-width: 900px) {
   .header__section-saved {
     height: 66px;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding: 0 35px;
+    width: auto;
   }
   .header__articles-saved {
     width: 160px;
@@ -121,20 +120,20 @@
   }
 }
 
-@media screen and (min-width: 300px) and (max-width: 399px) {
-  .header__section {
+@media screen and (min-width: 320px) and (max-width: 499px) {
+  .header__section-saved {
     height: 56px;
-    max-width: 399px;
+    width: auto;
     padding-left: 10px;
     padding-right: 10px;
     border-bottom: 0.05px solid gray;
     box-sizing: border-box;
   }
-  .header__title {
+  .header__title-saved {
     font-size: 16px;
     color: rgba(26, 27, 34, 1);
   }
-  .header__menu {
+  .header__menu-saved {
     background: none;
     border: none;
   }
