--- a/src/Components/NewsCardsList/NewsCardsList.css
+++ b/src/Components/NewsCardsList/NewsCardsList.css
@@ -3,12 +3,22 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 15px;
+  padding: 0;
+  justify-content: center;
 }
 
-@media screen and (min-width: 300px) and (max-width: 800px) {
+@media screen and (min-width: 451px) and (max-width: 900px) {
   .cards__list {
-    gap: 15px;
+    gap: 5px;
     justify-content: center;
     padding-left: 0;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 450px) {
+  .cards__list {
+    gap: 15px;
+    padding-left: 0px;
+    justify-content: center;
   }
 }
