--- a/src/Components/PopupWithForm/PopupWithForm.css
+++ b/src/Components/PopupWithForm/PopupWithForm.css
@@ -39,15 +39,14 @@
   right: -40px;
   top: -35px;
   border: none;
-  background: none;
+  background-image: url("../../Images/closeButton.svg");
   cursor: pointer;
-}
-
-.modal__close {
+  background-color: transparent;
   height: 40px;
+  width: 40px;
 }
 
-.modal__close:hover {
+.modal__button-reset:hover {
   opacity: 0.5;
 }
 
