--- a/src/Components/PopupWithForm/PopupWithForm.css
+++ b/src/Components/PopupWithForm/PopupWithForm.css
@@ -159,14 +159,14 @@
   opacity: 0.5;
 }
 
-.error {
+.modal__error {
   color: rgba(255, 0, 0, 1);
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 14.52px;
 }
-.error__none {
+.modal__error-none {
   display: none;
 }
 
