--- a/src/Components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/Components/SavedNewsHeader/SavedNewsHeader.css
@@ -72,7 +72,7 @@
   align-items: center;
   border: 2px solid rgba(26, 27, 34, 1);
   border-radius: 40px;
-  width: auto;
+  min-width: 112px;
   height: 48px;
   cursor: pointer;
 }
