--- a/src/Components/SearchForm/SearchForm.css
+++ b/src/Components/SearchForm/SearchForm.css
@@ -21,14 +21,14 @@
   cursor: pointer;
 }
 
-.error {
+.search__error {
   color: rgba(255, 0, 0, 1);
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 14.52px;
 }
-.error__none {
+.search__error-none {
   display: none;
 }
 
