--- a/src/Components/PopupWithForm/PopupWithForm.css
+++ b/src/Components/PopupWithForm/PopupWithForm.css
@@ -158,7 +158,7 @@
   display: none;
 }
 
-.modal__validation {
+.modal__validation-signin {
   position: absolute;
   top: 230px;
   left: 210px;
@@ -168,8 +168,18 @@
   font-size: 12px;
   line-height: 14.52px;
 }
-.modal__validation-one {
+.modal__validation-none {
   display: none;
+}
+.modal__validation-signup {
+  position: absolute;
+  top: 315px;
+  left: 180px;
+  color: rgba(255, 0, 0, 1);
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14.52px;
 }
 
 @media screen and (min-width: 500px) and (max-width: 600px) {
@@ -199,9 +209,13 @@
     height: 100%;
     padding: 20px 15px;
   }
-  .modal__bottom {
-    left: 135px;
-    top: 350px;
+  .modal__bottom-signin {
+    top: 345px;
+    left: 67.5px;
+  }
+  .modal__bottom-signup {
+    top: 415px;
+    left: 67.5px;
   }
   .modal__button-reset {
     right: 20px;
@@ -232,8 +246,12 @@
   .modal__error {
     top: 132px;
   }
-  .modal__validation {
+  .modal__validation-signin {
     top: 220px;
-    left: 190px;
+    left: 142px;
+  }
+  .modal__validation-signup {
+    top: 300px;
+    left: 110px;
   }
 }
